# ssh-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
ssh-client/: Cargo.toml
ssh-client/src/: auth.rs  channel.rs  disconnect.rs  kex.rs  lib.rs  main.rs  read.rs  ssh.rs
ssh2-test/: Cargo.toml
ssh2-test/data/: local-sent.txt
ssh2-test/examples/: agent-auth.rs  agent.rs  password-auth.rs  run-command.rs  scp-recv.rs  scp-send.rs
