[workspace]
members = ["ssh-client", "ssh2-test"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Gaurav Kumar <gauravsingh12341@gmail.com>"]
description = "SSH rust implementation."

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
hex = "0.4.3"
num_enum = "0.7.4"
p256 = { version = "0.13.2", features = ["ecdh"] }
rand = "0.9.2"
rand_core = "0.6.4"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
ssh2 = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
