[package]
name = "ssh-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
num_enum = { workspace = true }
p256 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
